Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138216

Errors in English language QML TreeView documentation

XMLWordPrintable

    • All
    • 0323d664f (dev), 4f1685fe2 (6.10), 517859575 (6.9)

      There are a couple of instances of a certain construct in the TreeView English documentation that initially make it difficult to understand before one realises what it intends to say.

      In the second paragraph of the "Detailed Description" section:

      "This means that even if the model has a parent-child tree structure, TreeView is internally using a proxy model..."

      In the "Customize Tree Nodes" section:

      "Even if TreeViewDelegate is customizable, there might be situations where you want to render the tree in a different way..."

      "Even if" suggests that something may or may not be the case, and that in either case whatever comes next is applicable. I believe that this is not what is meant in these contexts. The following are possible alternatives that convey the intended meaning:

      "Despite the model having a parent-child tree structure, ..."

      "Even though the TreeViewDelegate is customizable, ..."

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dheerendra Dheerendra Purohit
            bob64 Ian Boyd
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes