Doc: Clarify misleading even if phrasing in TreeView Documentation

Replaced unclear "even if" phrases in TreeView docs with clearer
wording ("despite","even though")to remove ambiguity and improve
readability.

Fixes: QTBUG-138216
Change-Id: Icc33e4900be9b639a7a9aaa2bb9d375b0db62403
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit 0323d664f745b3995955b7fa054a35465740aa1f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 4f1685fe22a46a86b6e8859a4153cf4db3775276)